# otc-to-book

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.codex/: hooks.json
.cursor/: hooks.json
apps/api/: README.md  package.json  pyproject.toml
apps/api/scripts/: evaluate_extraction.py
apps/api/src/otc_to_book/: __init__.py
apps/api/src/otc_to_book/api/: main.py
apps/api/src/otc_to_book/application/: evaluation.py  pipeline.py
apps/api/src/otc_to_book/domain/: book.py  extraction.py  models.py  validation.py
apps/api/src/otc_to_book/simulator/: generator.py
apps/api/tests/: conftest.py  test_api_ws.py  test_book.py  test_event_contracts.py  test_extraction.py  test_extraction_metrics.py  test_pipeline.py  test_sample_fixtures.py  test_scaffold.py  test_simulator.py  test_validation.py
docs/: DESIGN.md  PRODUCT.md  architecture.md  dashboard-critique-2026-06-20-skeleton.md  dashboard-critique-2026-06-20.md  domain-model.md  extraction-strategy.md  frontend.md  project-brief.md  roadmap.md  tooling.md
plans/: 001-deterministic-ticker-canonicalization.md  001-repo-docs-and-tooling.md  002-api-domain-pipeline.md  002-extraction-evaluation-fixtures-and-metrics.md  003-fast-fuzzy-llm-extraction-fallback.md  003-web-realtime-workstation.md  004-backend-extraction-provider-config.md  004-verification-and-readme.md  005-chaotic-extraction-evaluation-and-simulator.md  006-bounded-fuzzy-ticker-resolver.md  007-fix-replay-upload-flow.md  008-add-ci-verification-baseline.md  README.md  (+6 more)
(+36 files in other folders)
