[project]
name = "otc-to-book-api"
version = "0.1.0"
description = "FastAPI backend for OTC-to-Book."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.137.2",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "uvicorn==0.49.0",
  "websockets==16.0",
]

[dependency-groups]
dev = [
  "pytest==9.1.0",
  "ruff==0.15.18",
]

[build-system]
requires = ["uv_build==0.11.15"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = false
